# openglPlayground

./: .gitignore  CMakeLists.txt  README.md  simple-window.cpp  triangle-opengles.cpp
shaders/triangle/: shader_triangle.frag  shader_triangle.vert
